Fixing font on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,30 @@
 body {
-    margin: 20px;
+    margin: 0;    
     padding-top: 4em;
     display: block;
+
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 1rem;
 }
 
 .container {
-    width: 950px;
+    max-width: 950px;
     margin: 0px auto;
+}
+
+.content {
+    max-width: 600px;
+    float: left;
+    padding-left: 4em;
+    color: #333;
+    padding-bottom: 4em;
+}
+
+.content_post {
+    max-width: 728px;
+    margin: 0 auto;
+    color: #333;
+    padding: 0 1rem;
 }
 
 h2.professional, h2.talks{
@@ -31,21 +49,6 @@ div {
     border-bottom: 1px solid #999;
 }
 
-.content {
-    width: 600px;
-    float: left;
-    padding-left: 4em;
-    color: #333;
-    padding-bottom: 4em;
-}
-
-.content_post {
-    max-width: 728px;
-    margin: 0 auto;
-    color: #333;
-    padding: 0 1rem;
-}
-
 .myphoto {
     width: 30%;
     float: right;
@@ -58,12 +61,12 @@ img#ava {
 }
 
 p {
-    font-size: 1em;
-    line-height: 1.4em;
+    font-size: 1rem;
+    line-height: 1.4rem;
 }
 
 .authors, .venue {
-    padding-left: 1em;
+    padding-left: 1rem;
 }
 
 .paper {
@@ -94,13 +97,12 @@ table.education tr td {
 div.details {
     color: #999;
     padding-left: 10px;
-    font-size: 0.9em;
+    font-size: 0.9rem;
 }
 
 table.journeys tr td.time_slot {
     padding-right: 25px;
     vertical-align: text-top;
-    
 }
 
 div.zoom {
@@ -142,14 +144,12 @@ a.paper:hover {
     text-decoration: underline;
     color: #555;
 }
-body {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
+
 h1 {
-    font-size: 2em;
+    font-size: 2rem;
 }
 h2, .contact strong.email {
-    font-size: 1.3em;
+    font-size: 1.3rem;
 }
 
 div.contact {
@@ -158,7 +158,7 @@ div.contact {
     
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 ul.posts li {
